# databricks_pyspark_ref

./: 1.3.5  pyproject.toml
databricks_pyspark_ref/business_logics/: SalesDataInsights.py  get_aggregated_sales_data.py
databricks_pyspark_ref/main/: entry_notebook.py
databricks_pyspark_ref/output_datasets/: gender_purchase_details.csv
databricks_pyspark_ref/utils/: helpers.py
devops/: databricks-whl-deployment.yml
devops/templates/: build-wheel-template.yml  deploy-scripts-to-dbfs-template.yml  publish-to-feed-template.yml
