[tool.poetry]
name = "databricks-pyspark-ref"
version = "0.1.0"
description = ""
authors = ["Aravinth Kalaiselvan <arvindk2505@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pyspark = "^3.5.1"
databricks-connect = "^15.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
